{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 85,
  "lineage": "fa298889-5f8a-eae1-01bc-6099f15911b5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "BangaruEc2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-085925f297f89fce1",
            "arn": "arn:aws:ec2:us-east-1:639694136535:instance/i-04a7b24352d3fe6c1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04a7b24352d3fe6c1",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "elk_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bf14115451040cbb",
            "private_dns": "ip-10-0-1-40.ec2.internal",
            "private_ip": "10.0.1.40",
            "public_dns": "ec2-35-175-197-136.compute-1.amazonaws.com",
            "public_ip": "35.175.197.136",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e8255e7653d37f08",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb8490543d47486b",
            "tags": {
              "Name": "Bangaru-LogStash_Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00803d4b4254fef0b"
            ]
          },
          "dependencies": [
            "aws_security_group.BangaruSg",
            "aws_subnet.Bangaru-main-public-1",
            "aws_vpc.BangaruVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Bangaru-main-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-06808b479336a7bbd",
            "owner_id": "639694136535",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0f0d846b853ac3810"
          },
          "dependencies": [
            "aws_vpc.BangaruVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Bangaru-main-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05fcba9ac54741d99",
            "owner_id": "639694136535",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06808b479336a7bbd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-0f0d846b853ac3810"
          },
          "dependencies": [
            "aws_internet_gateway.Bangaru-main-gw",
            "aws_vpc.BangaruVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Bangaru-main-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03cf31b14942375bb",
            "route_table_id": "rtb-05fcba9ac54741d99",
            "subnet_id": "subnet-0fb8490543d47486b"
          },
          "dependencies": [
            "aws_internet_gateway.Bangaru-main-gw",
            "aws_route_table.Bangaru-main-public",
            "aws_subnet.Bangaru-main-public-1",
            "aws_vpc.BangaruVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Bangaru-main-public-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0684496246956a718",
            "route_table_id": "rtb-05fcba9ac54741d99",
            "subnet_id": "subnet-0c2bd8d6389991de8"
          },
          "dependencies": [
            "aws_internet_gateway.Bangaru-main-gw",
            "aws_route_table.Bangaru-main-public",
            "aws_subnet.Bangaru-main-public-2",
            "aws_vpc.BangaruVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Bangaru-main-public-3-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f9082ccd58d21c2",
            "route_table_id": "rtb-05fcba9ac54741d99",
            "subnet_id": "subnet-0f932599286b4b3c7"
          },
          "dependencies": [
            "aws_internet_gateway.Bangaru-main-gw",
            "aws_route_table.Bangaru-main-public",
            "aws_subnet.Bangaru-main-public-3",
            "aws_vpc.BangaruVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "BangaruSg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:639694136535:security-group/sg-00803d4b4254fef0b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00803d4b4254fef0b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20200516132937557000000001",
            "name_prefix": null,
            "owner_id": "639694136535",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "BangaruSg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0d846b853ac3810"
          },
          "dependencies": [
            "aws_vpc.BangaruVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Bangaru-main-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:639694136535:subnet/subnet-0b96571dec879314d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0b96571dec879314d",
            "map_public_ip_on_launch": false,
            "owner_id": "639694136535",
            "tags": {
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-0f0d846b853ac3810"
          },
          "dependencies": [
            "aws_vpc.BangaruVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Bangaru-main-private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:639694136535:subnet/subnet-060588cb877d26b4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-060588cb877d26b4c",
            "map_public_ip_on_launch": false,
            "owner_id": "639694136535",
            "tags": {
              "Name": "main-private-2"
            },
            "vpc_id": "vpc-0f0d846b853ac3810"
          },
          "dependencies": [
            "aws_vpc.BangaruVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Bangaru-main-private-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:639694136535:subnet/subnet-08ef5524c3255af65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-08ef5524c3255af65",
            "map_public_ip_on_launch": false,
            "owner_id": "639694136535",
            "tags": {
              "Name": "main-private-3"
            },
            "vpc_id": "vpc-0f0d846b853ac3810"
          },
          "dependencies": [
            "aws_vpc.BangaruVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Bangaru-main-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:639694136535:subnet/subnet-0fb8490543d47486b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0fb8490543d47486b",
            "map_public_ip_on_launch": true,
            "owner_id": "639694136535",
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-0f0d846b853ac3810"
          },
          "dependencies": [
            "aws_vpc.BangaruVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Bangaru-main-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:639694136535:subnet/subnet-0c2bd8d6389991de8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0c2bd8d6389991de8",
            "map_public_ip_on_launch": true,
            "owner_id": "639694136535",
            "tags": {
              "Name": "main-public-2"
            },
            "vpc_id": "vpc-0f0d846b853ac3810"
          },
          "dependencies": [
            "aws_vpc.BangaruVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Bangaru-main-public-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:639694136535:subnet/subnet-0f932599286b4b3c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0f932599286b4b3c7",
            "map_public_ip_on_launch": true,
            "owner_id": "639694136535",
            "tags": {
              "Name": "main-public-3"
            },
            "vpc_id": "vpc-0f0d846b853ac3810"
          },
          "dependencies": [
            "aws_vpc.BangaruVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "BangaruVpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:639694136535:vpc/vpc-0f0d846b853ac3810",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0be4bd589ea1980fc",
            "default_route_table_id": "rtb-0c35c8f72135a8df3",
            "default_security_group_id": "sg-08ec2b2678933e8fc",
            "dhcp_options_id": "dopt-6b8a4311",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f0d846b853ac3810",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c35c8f72135a8df3",
            "owner_id": "639694136535",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}